--- a/pom.xml
+++ b/pom.xml
@@ -3,19 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.carlos</groupId>
 	<artifactId>DefaultMapper</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>2.0.0-Release</version>
 
 	<dependencies>
-		<dependency>
-			<groupId>javassist</groupId>
-			<artifactId>javassist</artifactId>
-			<version>3.12.1.GA</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.4</version>
-		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -26,12 +16,6 @@
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-all</artifactId>
 			<version>1.3</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.16.10</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
